<resources>
    <string name="app_name">Emotolize</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Strings for MainFragment TextViews
    <string name="main_fragment_title">Data for %1$s</string>
    <string name="anger">Anger:  %.2f percent</string>
    <string name="contempt">Contempt:  %.2f percent</string>
    <string name="disgust">Disgust:  %.2f percent</string>
    <string name="fear">Fear:  %.2f percent</string>
    <string name="happiness">Happiness: %.2f percent</string>
    <string name="neutral">Neutral:  %.2f percent</string>
    <string name="sadness">Sadness:  %.2f percent</string>
    <string name="surprise">Surprise:  %.2f percent</string>

    //Strings for MainFragment BarChart
    <string name="bar_chart_title">The Mob Mentality</string>


</resources>
